fix jumpToSection height

--- a/custom.css
+++ b/custom.css
@@ -170,7 +170,7 @@ div.project-description {
 /*====== contact ======*/
 div.contact {
 	position: relative;
-	height: 200px;
+	height: 800px;
 	width: 100%;
 	text-align: center;
 	background: #3A414C;
